--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "iCreative Solutions - Modern SaaS Hub Website",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
